--- a/My Taxi/My Taxi/Base.lproj/Main.storyboard
+++ b/My Taxi/My Taxi/Base.lproj/Main.storyboard
@@ -332,7 +332,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vx3-m5-oe3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1485.5999999999999" y="640.92953523238384"/>
+            <point key="canvasLocation" x="2185" y="561"/>
         </scene>
         <!--Sign In View Controller-->
         <scene sceneID="2y3-t2-Ee7">
@@ -443,15 +443,141 @@
                             <outlet property="delegate" destination="DA8-dd-JMK" id="qL1-hb-jaf"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <segue destination="LIf-i5-b28" kind="show" identifier="mapView" id="rua-Fq-vFp"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a1c-VR-Nyc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2186" y="-215"/>
         </scene>
+        <!--Cab Request With Map View Controller-->
+        <scene sceneID="52t-gk-CpJ">
+            <objects>
+                <viewController id="LIf-i5-b28" customClass="CabRequestWithMapViewController" customModule="My_Taxi" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VJq-j5-Nf1"/>
+                        <viewControllerLayoutGuide type="bottom" id="WUa-bD-dbl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="aJS-CG-mVH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsTraffic="YES" translatesAutoresizingMaskIntoConstraints="NO" id="msW-hQ-cxm">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </mapView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x4N-QM-lr6">
+                                <rect key="frame" x="16" y="44" width="343" height="60"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="UmB-qa-Cd3"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="PEW-W0-0uk" kind="embed" id="Zf6-y3-b7e"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="msW-hQ-cxm" secondAttribute="trailing" id="A1s-um-57i"/>
+                            <constraint firstItem="msW-hQ-cxm" firstAttribute="leading" secondItem="aJS-CG-mVH" secondAttribute="leading" id="IME-SX-o6k"/>
+                            <constraint firstItem="x4N-QM-lr6" firstAttribute="top" secondItem="VJq-j5-Nf1" secondAttribute="bottom" constant="24" id="Q04-Jl-FiS"/>
+                            <constraint firstItem="WUa-bD-dbl" firstAttribute="top" secondItem="msW-hQ-cxm" secondAttribute="bottom" id="W5R-8S-tMD"/>
+                            <constraint firstAttribute="trailing" secondItem="x4N-QM-lr6" secondAttribute="trailing" constant="16" id="hyj-vn-atb"/>
+                            <constraint firstItem="x4N-QM-lr6" firstAttribute="leading" secondItem="aJS-CG-mVH" secondAttribute="leading" constant="16" id="itW-Bo-qXN"/>
+                            <constraint firstItem="msW-hQ-cxm" firstAttribute="top" secondItem="VJq-j5-Nf1" secondAttribute="bottom" id="tLJ-X8-rX5"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="leftConstrainForDS" destination="itW-Bo-qXN" id="RG9-12-nRh"/>
+                        <outlet property="topConstraintForDS" destination="Q04-Jl-FiS" id="Ty0-4l-lZk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mzD-oJ-z02" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3372" y="118.29085457271366"/>
+        </scene>
+        <!--Destination Search View Controller-->
+        <scene sceneID="EwM-s0-Vgi">
+            <objects>
+                <viewController id="PEW-W0-0uk" customClass="DestinationSearchViewController" customModule="My_Taxi" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="W0W-cS-8Y8"/>
+                        <viewControllerLayoutGuide type="bottom" id="SVe-rO-PG9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="PXh-N7-wHU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Destination" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JFh-B6-TGV">
+                                <rect key="frame" x="52" y="0.0" width="323" height="60"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <textInputTraits key="textInputTraits" keyboardAppearance="alert" returnKeyType="search"/>
+                                <connections>
+                                    <outlet property="delegate" destination="PEW-W0-0uk" id="YdK-zU-fiJ"/>
+                                </connections>
+                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="navigation" translatesAutoresizingMaskIntoConstraints="NO" id="S7c-nX-uo6">
+                                <rect key="frame" x="4" y="8" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="mOC-IQ-rd7"/>
+                                    <constraint firstAttribute="height" constant="44" id="vmV-ag-3Qo"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="S7c-nX-uo6" firstAttribute="leading" secondItem="PXh-N7-wHU" secondAttribute="leading" constant="4" id="E1X-FS-5sg"/>
+                            <constraint firstItem="SVe-rO-PG9" firstAttribute="top" secondItem="JFh-B6-TGV" secondAttribute="bottom" id="VX6-AS-eVn"/>
+                            <constraint firstAttribute="trailing" secondItem="JFh-B6-TGV" secondAttribute="trailing" id="W02-vV-CGR"/>
+                            <constraint firstItem="JFh-B6-TGV" firstAttribute="top" secondItem="W0W-cS-8Y8" secondAttribute="bottom" id="kQ2-kj-L0y"/>
+                            <constraint firstItem="JFh-B6-TGV" firstAttribute="leading" secondItem="S7c-nX-uo6" secondAttribute="trailing" constant="4" id="kXj-nL-v6H"/>
+                            <constraint firstItem="S7c-nX-uo6" firstAttribute="centerY" secondItem="PXh-N7-wHU" secondAttribute="centerY" id="t4s-NY-xAo"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                <integer key="value" value="2"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="60"/>
+                    <connections>
+                        <outlet property="enterDestination" destination="JFh-B6-TGV" id="dyb-fZ-IpQ"/>
+                        <outlet property="searchDisplayController" destination="aPD-E3-74K" id="C89-Sw-tEj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fa1-w8-vBL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="aPD-E3-74K">
+                    <connections>
+                        <outlet property="delegate" destination="PEW-W0-0uk" id="86Z-97-sYH"/>
+                        <outlet property="searchContentsController" destination="PEW-W0-0uk" id="4ss-b9-Rpt"/>
+                        <outlet property="searchResultsDataSource" destination="PEW-W0-0uk" id="QkD-K8-GIB"/>
+                        <outlet property="searchResultsDelegate" destination="PEW-W0-0uk" id="ENX-Ne-6zT"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="4188" y="117.84107946026987"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="eYZ-CX-vUR">
+            <objects>
+                <viewController id="Qvy-y0-lHp" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="G2B-gH-vpM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NyR-Jc-Xv6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
     </scenes>
     <resources>
         <image name="female_filled" width="25" height="25"/>
         <image name="male_filled" width="25" height="25"/>
+        <image name="navigation" width="64" height="64"/>
         <image name="welcome_logo" width="920" height="356"/>
     </resources>
 </document>
